kubernetes/apps/games/minecraft/app/netpol.yaml
---
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: minecraft
spec:
  endpointSelector:
    matchLabels:
      app.kubernetes.io/name: minecraft
  ingress:
    - fromEndpoints:
        - matchLabels:
            app.kubernetes.io/name: gate
      toPorts:
        - ports:
            - port: '25565'
              protocol: TCP
    - fromEndpoints:
        - matchLabels:
            k8s:io.kubernetes.pod.namespace: monitoring
            k8s:app.kubernetes.io/name: vmagent
      toPorts:
        - ports:
            - port: '25585'
              protocol: TCP
